Fix truncated text & line-clamp for playlist titles on mobile

--- a/ui/page/playlists/internal/collectionsListMine/internal/collectionPreview/style.scss
+++ b/ui/page/playlists/internal/collectionsListMine/internal/collectionPreview/style.scss
@@ -106,6 +106,14 @@
       .icon {
         display: none;
       }
+      .truncated-text {
+        span {
+          -webkit-line-clamp: 1;
+          margin-right: var(--spacing-s);
+          word-wrap: break-word;
+          -webkit-box-orient: vertical;
+        }
+      }
     }
   }
 
